<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.co.shopster.shopster.activities.OrderSummaryActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/label_order_id"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/text_order_id"
            android:textSize="20sp"
            android:text="@string/placeholder_dots"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/label_order_price"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/text_order_price"
            android:textSize="20sp"
            android:text="@string/placeholder_dots"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/label_order_status"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/text_order_status"
            android:textSize="20sp"
            android:text="@string/placeholder_dots"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_refresh"
            android:text="@string/label_refresh"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_delivery_selection"
            >

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/btn_take"
                android:visibility="gone"
                android:text="@string/label_take_package"
                />


            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:id="@+id/btn_deliver"
                android:visibility="gone"
                android:text="@string/label_deliver"
                />


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_pay"
            android:text="@string/label_pay"
            />

    </LinearLayout>



</RelativeLayout>
