<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="in.co.shopster.shopster.activities.RegistrationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#fff"
            >

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:text="@string/label_email"
                />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:layout_marginTop="0dp"
                android:text="@string/label_password"
                />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:layout_marginTop="0dp"
                android:text="@string/label_first_name"
                />


            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:layout_marginTop="0dp"
                android:text="@string/label_last_name"
                />

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:layout_marginTop="0dp"
                android:text="@string/label_age"
                />

            <EditText
                android:id="@+id/edit_age"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:layout_marginTop="0dp"
                android:text="@string/label_gender"
                />

            // @TODO: Gender select
            <Spinner
                android:id="@+id/spin_gender"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </Spinner>


           <TextView
               android:layout_width="match_parent"
               android:layout_height="30dp"
               android:layout_marginTop="20dp"
               android:textSize="20dp"
               android:text="@string/label_address"
               />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="30dp"
               android:layout_marginTop="5dp"
               android:textSize="20dp"
               android:text="@string/label_line_1"
               />

           <EditText
               android:id="@+id/edit_line_1"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:inputType="text"
               />

           <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:text="@string/label_line_2"
            />

            <EditText
                android:id="@+id/edit_line_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:text="@string/label_city"
                />

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:text="@string/label_state"
                />

            <EditText
                android:id="@+id/edit_state"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:text="@string/label_zip_code"
                />

            <EditText
                android:id="@+id/edit_zip_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/label_register"
                />


        </LinearLayout>



    </ScrollView>



</android.support.design.widget.CoordinatorLayout>
