<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<Button-->
        <!--android:id="@+id/btn_test"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="Test"-->
        <!--/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:text="@string/label_wallet_balance"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:text="@string/label_rupees"
                />

            <TextView
                android:id="@+id/text_wallet_balance"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:text="@string/label_not_available"
                />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:layout_marginTop="100dp"
            android:text="@string/label_recharge_wallet"
            />

        <EditText
            android:id="@+id/edit_coupon_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_coupon_code"
            />

        <!--<Button-->
            <!--android:id="@+id/btn_recharge"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="@string/label_recharge"-->
            <!--/>-->
        <info.hoang8f.widget.FButton
            android:id="@+id/btn_recharge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_recharge"
            android:layout_marginLeft="0dp"
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            fbutton:buttonColor="@color/fbutton_color_carrot"
            fbutton:shadowColor="@color/fbutton_color_carrot"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            />



    </LinearLayout>


</FrameLayout>