<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context="lococina.lococina.ui.activity.NoNetworkAvailableActivity"
    android:id="@+id/layout"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/title_scan_through"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--<Button-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:id="@+id/btn_scan_nfc"-->
                <!--android:text="@string/label_nfc"-->
                <!--/>-->
            <info.hoang8f.widget.FButton
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/btn_scan_nfc"
                android:text="@string/label_nfc"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                fbutton:buttonColor="@color/fbutton_color_carrot"
                fbutton:shadowColor="@color/fbutton_color_carrot"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                />



            <!--<Button-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:id="@+id/btn_scan_qr"-->
                <!--android:layout_marginLeft="50dp"-->
                <!--android:text="@string/label_qr_code"-->
                <!--/>-->
            <info.hoang8f.widget.FButton
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/btn_scan_qr"
                android:layout_marginLeft="50dp"
                android:text="@string/label_qr_code"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                fbutton:buttonColor="@color/fbutton_color_carrot"
                fbutton:shadowColor="@color/fbutton_color_carrot"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                />


        </LinearLayout>

    </LinearLayout>




</RelativeLayout>